# DeliveryBot

./: .gitignore  CMakeLists.txt  Makefile  arduino_code.c  ci.py  devices.hpp  global_state.hpp  main  main.c  main.cpp  make.cmake  makefile  mutex.h  mutex.hpp
api/: StaticContentSrv.cpp
api/controller/: TelemetryController.cpp
arduino_code/: arduino_code.ino
drivers/: Accelerometer.cpp  accelerometer.c  accelerometer.cpp  accelerometer.h  accelerometer.hpp  camera.hpp
src/: AppComponent.hpp  SwagerComponent.hpp  global_state.h  global_state.hpp  main.cpp
src/api/controller/: CamAPIController.cpp  CamAPIController.hpp  ModeController.hpp  MotorController.hpp  RobotController.cpp  StaticContent.hpp  TelemetryController.hpp  VideoStreamController.cpp
src/api/static/: index.html
src/api/video_stream_backend/: ImageWSListener.cpp  ImageWSListener.hpp  Utils.cpp  Utils.hpp  V4LGrabber.cpp  V4LGrabber.hpp
src/drivers/: Accelerometer.cpp  Accelerometer.h  Camera.cpp  Camera.h
test/: test_accelerometer.c  test_accelerometer.cpp  test_video_stream.cpp
